Moving over naming to nsjail stuffs.

--- a/nsjail.conf
+++ b/nsjail.conf
@@ -1,6 +1,6 @@
 # EXAMPLE:
 #
-# LoadModule ruid2_module   modules/mod_ruid2.so
+# LoadModule ruid2_module   modules/mod_nsjail.so
 # User                     apache
 # Group                    apache
 # RMode                    stat
@@ -46,9 +46,9 @@
 #   ServerAlias    www.example.net
 # </VirtualHost>
 
-LoadModule ruid2_module modules/mod_ruid2.so
+LoadModule nsjail_module modules/mod_nsjail.so
 
-#<IfModule mod_ruid2.c>
+#<IfModule mod_nsjail.c>
 #    RMode stat
 #    RGroups @none
 #</IfModule>
