Remove RMode, always require config.

--- a/nsjail.conf
+++ b/nsjail.conf
@@ -1,9 +1,8 @@
 # EXAMPLE:
 #
-# LoadModule ruid2_module   modules/mod_nsjail.so
+# LoadModule nsjail_module   modules/mod_nsjail.so
 # User                     apache
 # Group                    apache
-# RMode                    stat
 # RGroups                  apachetmp
 # RDocumentChRoot          /home /example.com/public_html
 #
@@ -13,16 +12,10 @@
 #   RDocumentChRoot /home /example.com/public_html
 #   ServerName     example.com
 #   ServerAlias    www.example.com
-#   RMode          config		# unnecessary since config is the default
 #   RUidGid        user1 group1
 #   RGroups        apachetmp
 #
-#   <Directory /home/example.com/public_html/dir>
-#       RMode stat
-#   </Directory>
-#
 #   <Directory /home/example.com/public_html/dir/test>
-#       RMode config
 #       RUidGid user2 group2
 #       RGroups groups1
 #   </Directory>
@@ -32,7 +25,6 @@
 #   </Directory>
 #
 #   <Location /yustadir>
-#       RMode config
 #       RUidGid user4 user4
 #       RGroups groups4
 #   </Location>
@@ -49,6 +41,5 @@
 LoadModule nsjail_module modules/mod_nsjail.so
 
 #<IfModule mod_nsjail.c>
-#    RMode stat
 #    RGroups @none
 #</IfModule>
